Import of DRRHO/TM-1.20 from CPAN.
gitpan-cpan-distribution: TM
gitpan-cpan-version:      1.20
gitpan-cpan-path:         DRRHO/TM-1.20.tar.gz
gitpan-cpan-author:       DRRHO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension TM
 
+1.20
+	- added TM::Tau::Filter
+	- added TM::Analysis (first part)
+
 1.19  Thu Sep 28 18:18:42 EST 2006
 	- split mapsphere test into two parts (MLDBM does not like it to be used with different serializers in one program)
 	- added torture test for hierarchical MLDBM2 databases
