--- a/Changes
+++ b/Changes
@@ -1,5 +1,17 @@
 Revision history for Perl extension TM
 
+1.22  Thu Nov 30 18:22:51 EST 2006
+	- improved: TM::DM documentation
+	- rearranged traits to do 'inheritance'
+	- improved: TM::Tau documentation
+	- re-added: TM::Overview (tutorials missing)
+	- created: TM::FAQ (draft state)
+	- fixed: taxonomy bug in types (variable scoping wrong)
+	- changed: meaning of 'instances': a thing has _ALL_ topics as instances (even itself)
+	- added: TM::Analysis orphanage: figures out topics which have no instances, no types, ...
+	- added: TM::DM has more sophistication in selecting topics from a map
+	- changed: TM::Analysis is now a trait
+
 1.21  Sun Oct  1 11:01:40 EST 2006
 	- added: first experimental TMQL support (test cases not yet included)
 	- improved: PSI docu (somewhat)
