Import of DRRHO/TM-1.26 from CPAN.
gitpan-cpan-distribution: TM
gitpan-cpan-version:      1.26
gitpan-cpan-path:         DRRHO/TM-1.26.tar.gz
gitpan-cpan-author:       DRRHO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Revision history for Perl extension TM
 
 Note: Entries now marked with ! indicate a break of backwards compatibility.
 
+1.26  Mon Apr 16 14:13:57 EST 2007
+	- added: diff for maps (EXPERIMENTAL, test cases missing, az)
+
 1.25  Fri Jan  5 18:51:12 EST 2007
 	- added: TODO list
 	- rearranged (and generalized): TS.pm atomification handling
