Import of DRRHO/TM-1.27 from CPAN.
gitpan-cpan-distribution: TM
gitpan-cpan-version:      1.27
gitpan-cpan-path:         DRRHO/TM-1.27.tar.gz
gitpan-cpan-author:       DRRHO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Revision history for Perl extension TM
 
 Note: Entries now marked with ! indicate a break of backwards compatibility.
 
+1.27  ???
+	- added TM::Bulk trait (for mass retrieval)
+
 1.26  Mon Apr 16 14:13:57 EST 2007
 	- added: diff for maps (EXPERIMENTAL, test cases missing, az)
 
