--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Perl extension TM
 
 Note: Entries now marked with ! indicate a break of backwards compatibility.
 
+1.34  Mo 24. Mär 10:50:05 CET 2008
+	- fixed: spurious error message in t/096 because of whacky tmp file creation (rho)
+	- fixed: deactivated speed test for indices (rho), TODO systematic test
+
 1.33  So 23. Mär 20:39:55 CET 2008
 	- TM::* removed dependency from Test::Deeply::NoTest (conflicts with Class::Trait under Perl 5.10)
 	- TM: reactivated diff code and added test cases for it (rho, TODO identification stuff flaky)
