Import of DRRHO/TM-1.37 from CPAN.
gitpan-cpan-distribution: TM
gitpan-cpan-version:      1.37
gitpan-cpan-path:         DRRHO/TM-1.37.tar.gz
gitpan-cpan-author:       DRRHO
gitpan-cpan-maturity:     released

--- a/TODO
+++ b/TODO
@@ -29,7 +29,8 @@ TM:
 
 	- differences between two maps
 
-          $tm3 = $tm1->subtract ($tm2);
+	  more test cases
+	  does this work with assertions coming and going?
 
 	- equivalence of two maps
 
@@ -179,11 +180,6 @@ TM::Tree:
 	- test: works on virtual map?
 	- check: VERSION
 
-TM::Bulk
-	- to be readded
-	- add name resolution
-	- vortex (plus scoped)
-	- reorg as trait
 
 #-- mapsphere ------------------------------------------------------------------------------
 
