--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Perl extension TM
 
 Note: Entries now marked with ! indicate a break of backwards compatibility.
 
+1.37  Wed Apr  9 20:08:00 CEST 2008
+	- importing into private trac
+	- test autoupload
+
 1.36  Sa 29. Mär 15:58:42 CET 2008
 	- README: overhaul
 	- TM: diff: added missing differential assertions (fix, rho), TODO: this all needs more test cases
