--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Perl extension TM
 
 Note: Entries now marked with ! indicate a break of backwards compatibility.
 
+1.38  Fri Apr 11 21:45:50 CEST 2008
+	- TM::Graph: doc fixes, fixed bug for nesting repeats
+	- TM::* : analysis: fixed missing test cases
+
 1.37  Wed Apr  9 20:08:00 CEST 2008
 	- importing into private trac
 	- test autoupload
