--- a/README
+++ b/README
@@ -8,19 +8,15 @@ With it you can
 
   - manipulate topic maps via an API
   - navigate through TMs via a TMDM-like API (almost TMAPI)
-  - read AsTMa 1.x and 2.x resources
+  - read/write AsTMa 1.x and 2.x resources
+  - read LTM resources
+  - read/write XTM 1/2 resources
   - create virtualized topic maps
   - use a topic map backend store
   - add drivers for your own native store
   - add indices to speed up things
   - query topic maps via TMQL (query language, in the working)
-  - a command line driven workbench (tm)
   - and more
-
-Future releases will add (please bear with me until I have this all
-consolidated and documented):
-
-  - read/write XTM files (TODO)
 
 Prerequisites
 -------------
@@ -58,6 +54,11 @@ You can learn about Topic Maps in general at
 
   http://astma.it.bond.edu.au/  (shorthand notation used by the authors)
 
+For this particular package I also recommend the
+tutorials in
+
+  maps/tutorials.atm
+
 Support
 -------
 
@@ -65,7 +66,7 @@ You can either
 
   - mail to the author (rho@devc.at), or
   - discuss this in one of the topicmap mailing lists, or
-  - find me in the freenode #topicmaps IRC channel (clever choice), or
+  - find me in the freenode #topicmaps IRC channel, or
   - create a bug entry in rt.cpan.org (preferred)
 
 Copyright 200[1-8] Robert Barta, rho@devc.at
