Import of DRRHO/TM-1.43 from CPAN.
gitpan-cpan-distribution: TM
gitpan-cpan-version:      1.43
gitpan-cpan-path:         DRRHO/TM-1.43.tar.gz
gitpan-cpan-author:       DRRHO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -4,6 +4,11 @@ Note: Entries marked with
     - ! indicate a break of backwards compatibility.
     - ~ indicate a future break of compatibility, marked as deprecated
 
+1.43  Mon Jul 21 20:44:09 CEST 2008
+	- change: Makefile.PL adapted to new mcpani version
+	- change: Makefile.PL uses 5.8 (instead of v5.8) to not upset 5.5 interpreters
+	- fix:    diff handling (az)
+
 1.42  Mon Jun 30 21:09:29 CEST 2008
 	- fix:    bug (03resource) made wrong assumption about inline: resources
 	- fix:    bug (TM.pm) getting all assertions ARRAY ref'ed
