--- a/Changes
+++ b/Changes
@@ -4,11 +4,19 @@ Note: Entries marked with
     - ! indicate a break of backwards compatibility.
     - ~ indicate a future break of compatibility, marked as deprecated
 
-1.44  ????????????????????????
+1.45  ????????????????????????????
+	- fix: deserialization to astma1 "topic reifies non-assoc" handled properly (az)
+	- fix: bug in TM::asserts (comparison based on mem address and not on LID!)
+	- add: added TM::clear method to remove all content in one go
+	- mod: CTM parser: deserializes now returns map object
+	- mod: AsTMa deserializer: additional omit_provenance option
+
+1.44  Sat Oct  4 19:40:52 CEST 2008
 	- fix:    toplets did not return correct results (rho)
 	- adapt:  new LWP::Simple chokes on non-absolute URLs and causes hiccups (rho)
 	- fix:    TM: synopsis wrong (retrieve, asserts), (rho)
 	- change: test files do not show STDERR messages (rho)
+	- add:    TM::Coverage to display coverage information (rho)
 
 1.43  Mon Jul 21 20:44:09 CEST 2008
 	- change: Makefile.PL adapted to new mcpani version
